--- a/index.html
+++ b/index.html
@@ -1,58 +1,69 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>make filters for images</title>
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link rel="stylesheet" href="styles.css">
-	<title>JS</title>
-</head>
+  <body>
+    <div class="app">
+      <div class="box image">
+        <img
+          src="https://images.pexels.com/photos/371633/pexels-photo-371633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+          alt="photo"
+          id="photo"
+        />
+        <div class="input">
+          <input
+            id="img-url"
+            type="text"
+            placeholder="Введите URL картинки"
+            value="https://images.pexels.com/photos/371633/pexels-photo-371633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+          />
+        </div>
+      </div>
+      <div class="box settings">
+        <div class="sliders">
+          <div class="slider">
+            <label for="grayscale">Оттенки серого</label>
+            <input type="range" min="0" max="100" value="0" id="grayscale" />
+          </div>
 
-<body>
+          <div class="slider">
+            <label for="contrast">Контраст</label>
+            <input type="range" min="0" max="200" value="100" id="contrast" />
+          </div>
 
-	<div class="app">
-		<div class="box image">
-			<img src="https://images.pexels.com/photos/371633/pexels-photo-371633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-			 alt="photo" id="photo">
-			<div class="input">
-				<input id="img-url" type="text" placeholder="Введите URL картинки" value="https://images.pexels.com/photos/371633/pexels-photo-371633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
-			</div>
-		</div>
-		<div class="box settings">
-			<div class="sliders">
-				<div class="slider">
-					<label for="grayscale">Оттенки серого</label>
-					<input type="range" min="0" max="100" value="0" id="grayscale">
-				</div>
+          <div class="slider">
+            <label for="brightness">Яркость</label>
+            <input type="range" min="0" max="200" value="100" id="brightness" />
+          </div>
 
-				<div class="slider">
-					<label for="contrast">Контраст</label>
-					<input type="range" min="0" max="200" value="100" id="contrast">
-				</div>
+          <div class="slider">
+            <label for="sepia">Сепия</label>
+            <input type="range" min="0" max="100" value="0" id="sepia" />
+          </div>
 
-				<div class="slider">
-					<label for="brightness">Яркость</label>
-					<input type="range" min="0" max="200" value="100" id="brightness">
-				</div>
-
-				<div class="slider">
-					<label for="sepia">Сепия</label>
-					<input type="range" min="0" max="100" value="0" id="sepia">
-				</div>
-
-				<div class="slider">
-					<label for="saturate">Насыщенность</label>
-					<input type="range" min="0" max="200" value="100" id="saturate">
-				</div>
-			</div>
-			<div class="buttons">
-				<button class="btn" id="reset" disabled>Сбросить</button>
-			</div>
-		</div>
-	</div>
-	<script src="script.js"></script>
-</body>
-
+          <div class="slider">
+            <label for="saturate">Насыщенность</label>
+            <input type="range" min="0" max="200" value="100" id="saturate" />
+          </div>
+        </div>
+        <div class="buttons">
+          <button class="btn" id="reset" disabled>Сбросить</button>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
